[project]
name = "llm-siliconflow"
version = "0.1.4"
description = "Access siliconflow.cn models via API"
readme = "README.md"
authors = [{name = "WanZheng"}]
license = {text = "Apache-2.0"}
classifiers = [
    "License :: OSI Approved :: Apache Software License"
]
dependencies = [
    "llm"
]

[project.urls]
Homepage = "https://github.com/WanZheng/llm-siliconflow"
Changelog = "https://github.com/WanZheng/llm-siliconflow/releases"
Issues = "https://github.com/WanZheng/llm-siliconflow/issues"
CI = "https://github.com/WanZheng/llm-siliconflow/actions"

[project.entry-points.llm]
siliconflow = "llm_siliconflow"

[project.optional-dependencies]
test = ["pytest"]
